# faux-libtool

./: .gitignore  Main.hs  README.md  faux-libtool.cabal
