name:                faux-libtool
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikjuo@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable libtool
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >=4.7 && <4.8
                      ,process >=1.2 && <2.0
                      ,temporary >=1.2 && <2.0
                      ,directory >=1.2 && <2.0
                      ,transformers >=0.4 && <1.0
                      ,unix >=2.7 && <3.0
  default-language:    Haskell2010

